--- a/src/app/components/entity-input/entity-input.component.scss
+++ b/src/app/components/entity-input/entity-input.component.scss
@@ -10,7 +10,15 @@
       > div {
         flex: 1;
       }
+
+      .form-group {
+        display: flex;
+        flex-direction: column;
+
+        span {
+          align-self: flex-end;
+        }
+      }
     }
   }
-  
 }
