--- a/src/app/components/modal-new-entity/modal-new-entity.component.scss
+++ b/src/app/components/modal-new-entity/modal-new-entity.component.scss
@@ -4,7 +4,18 @@
     flex-direction: column;
     gap: 1rem;
   }
+  .modal-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 4px 24px;
+  }
   .modal-new-entity {
     width: 100%;
+  }
+  .future-events-container {
+    display: flex;
+    flex-direction: column;
+    gap: .5rem;
   }
 }
