Refactor | PanelCycles - Changed title tag

--- a/src/app/components/panel-cycles/panel-cycles.component.html
+++ b/src/app/components/panel-cycles/panel-cycles.component.html
@@ -2,7 +2,7 @@
   <mat-expansion-panel>
     <mat-expansion-panel-header>
       <mat-panel-title> 
-        <p>Selecione ciclos <span>(opcional)</span></p>
+        <h4>Selecione ciclos <span>(opcional)</span></h4>
       </mat-panel-title>
     </mat-expansion-panel-header>
     <mat-card>      
